src/antlr_tools/MgParser.java
package antlr_tools;// Generated from Mg.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MgParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, LogicConstant=33, PosIntegerConstant=34, StringConstant=35, 
		LineComment=36, BlockComment=37, WhiteSpace=38, NewLine=39, Bool=40, Int=41, 
		String=42, Void=43, Null=44, True=45, False=46, If=47, Else=48, For=49, 
		While=50, Break=51, Continue=52, Return=53, New=54, Class=55, This=56, 
		Identifier=57;
	public static final int
		RULE_prog = 0, RULE_dec = 1, RULE_globalDec = 2, RULE_functDec = 3, RULE_classDec = 4, 
		RULE_varDec = 5, RULE_varDeclaratorList = 6, RULE_varDeclarator = 7, RULE_functDecParaList = 8, 
		RULE_functDecPara = 9, RULE_classBody = 10, RULE_classBodyDec = 11, RULE_fieldDec = 12, 
		RULE_methodDec = 13, RULE_constructorDec = 14, RULE_stm = 15, RULE_expStm = 16, 
		RULE_blockStm = 17, RULE_varDecStm = 18, RULE_ifStm = 19, RULE_whileStm = 20, 
		RULE_forStm = 21, RULE_forControl = 22, RULE_forInit = 23, RULE_forUpdate = 24, 
		RULE_breakStm = 25, RULE_continueStm = 26, RULE_returnStm = 27, RULE_emptyStm = 28, 
		RULE_exp = 29, RULE_primaryExp = 30, RULE_literal = 31, RULE_arrayAccessor = 32, 
		RULE_arguments = 33, RULE_expList = 34, RULE_creator = 35, RULE_arrayCreatorDim = 36, 
		RULE_integerLiteral = 37, RULE_stringLiteral = 38, RULE_logicLiteral = 39, 
		RULE_type = 40, RULE_simpleType = 41, RULE_primitiveType = 42, RULE_userType = 43, 
		RULE_arrayType = 44, RULE_arrayDimDecList = 45, RULE_arrayDimDec = 46;
	public static final String[] ruleNames = {
		"prog", "dec", "globalDec", "functDec", "classDec", "varDec", "varDeclaratorList", 
		"varDeclarator", "functDecParaList", "functDecPara", "classBody", "classBodyDec", 
		"fieldDec", "methodDec", "constructorDec", "stm", "expStm", "blockStm", 
		"varDecStm", "ifStm", "whileStm", "forStm", "forControl", "forInit", "forUpdate", 
		"breakStm", "continueStm", "returnStm", "emptyStm", "exp", "primaryExp", 
		"literal", "arrayAccessor", "arguments", "expList", "creator", "arrayCreatorDim", 
		"integerLiteral", "stringLiteral", "logicLiteral", "type", "simpleType", 
		"primitiveType", "userType", "arrayType", "arrayDimDecList", "arrayDimDec"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'('", "')'", "','", "'='", "'{'", "'}'", "'++'", "'--'", 
		"'+'", "'-'", "'!'", "'~'", "'*'", "'/'", "'%'", "'<<'", "'>>'", "'>'", 
		"'>='", "'<'", "'<='", "'=='", "'!='", "'&'", "'^'", "'|'", "'&&'", "'||'", 
		"'.'", "'['", "']'", null, null, null, null, null, null, null, "'bool'", 
		"'int'", "'string'", "'void'", "'null'", "'true'", "'false'", "'if'", 
		"'else'", "'for'", "'while'", "'break'", "'continue'", "'return'", "'new'", 
		"'class'", "'this'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "LogicConstant", 
		"PosIntegerConstant", "StringConstant", "LineComment", "BlockComment", 
		"WhiteSpace", "NewLine", "Bool", "Int", "String", "Void", "Null", "True", 
		"False", "If", "Else", "For", "While", "Break", "Continue", "Return", 
		"New", "Class", "This", "Identifier"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mg.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MgParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MgParser.EOF, 0); }
		public List<DecContext> dec() {
			return getRuleContexts(DecContext.class);
		}
		public DecContext dec(int i) {
			return getRuleContext(DecContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Bool) | (1L << Int) | (1L << String) | (1L << Void) | (1L << Class) | (1L << Identifier))) != 0)) {
				{
				{
				setState(94);
				dec();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecContext extends ParserRuleContext {
		public GlobalDecContext globalDec() {
			return getRuleContext(GlobalDecContext.class,0);
		}
		public FunctDecContext functDec() {
			return getRuleContext(FunctDecContext.class,0);
		}
		public ClassDecContext classDec() {
			return getRuleContext(ClassDecContext.class,0);
		}
		public DecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecContext dec() throws RecognitionException {
		DecContext _localctx = new DecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dec);
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				globalDec();
				setState(103);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				functDec();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(106);
				classDec();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalDecContext extends ParserRuleContext {
		public VarDecContext varDec() {
			return getRuleContext(VarDecContext.class,0);
		}
		public GlobalDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterGlobalDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitGlobalDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitGlobalDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalDecContext globalDec() throws RecognitionException {
		GlobalDecContext _localctx = new GlobalDecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			varDec();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctDecContext extends ParserRuleContext {
		public Token functName;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public BlockStmContext blockStm() {
			return getRuleContext(BlockStmContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MgParser.Identifier, 0); }
		public FunctDecParaListContext functDecParaList() {
			return getRuleContext(FunctDecParaListContext.class,0);
		}
		public FunctDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterFunctDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitFunctDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitFunctDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctDecContext functDec() throws RecognitionException {
		FunctDecContext _localctx = new FunctDecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			type();
			setState(112);
			((FunctDecContext)_localctx).functName = match(Identifier);
			setState(113);
			match(T__1);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Bool) | (1L << Int) | (1L << String) | (1L << Void) | (1L << Identifier))) != 0)) {
				{
				setState(114);
				functDecParaList();
				}
			}

			setState(117);
			match(T__2);
			setState(118);
			blockStm();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDecContext extends ParserRuleContext {
		public Token className;
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MgParser.Identifier, 0); }
		public ClassDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterClassDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitClassDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitClassDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDecContext classDec() throws RecognitionException {
		ClassDecContext _localctx = new ClassDecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(Class);
			setState(121);
			((ClassDecContext)_localctx).className = match(Identifier);
			setState(122);
			classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDecContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDeclaratorListContext varDeclaratorList() {
			return getRuleContext(VarDeclaratorListContext.class,0);
		}
		public VarDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterVarDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitVarDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitVarDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDecContext varDec() throws RecognitionException {
		VarDecContext _localctx = new VarDecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			type();
			setState(125);
			varDeclaratorList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclaratorListContext extends ParserRuleContext {
		public List<VarDeclaratorContext> varDeclarator() {
			return getRuleContexts(VarDeclaratorContext.class);
		}
		public VarDeclaratorContext varDeclarator(int i) {
			return getRuleContext(VarDeclaratorContext.class,i);
		}
		public VarDeclaratorListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaratorList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterVarDeclaratorList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitVarDeclaratorList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitVarDeclaratorList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclaratorListContext varDeclaratorList() throws RecognitionException {
		VarDeclaratorListContext _localctx = new VarDeclaratorListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDeclaratorList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			varDeclarator();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(128);
				match(T__3);
				setState(129);
				varDeclarator();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclaratorContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(MgParser.Identifier, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public VarDeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclarator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterVarDeclarator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitVarDeclarator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitVarDeclarator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclaratorContext varDeclarator() throws RecognitionException {
		VarDeclaratorContext _localctx = new VarDeclaratorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varDeclarator);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(Identifier);
				setState(137);
				match(T__4);
				setState(138);
				exp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctDecParaListContext extends ParserRuleContext {
		public List<FunctDecParaContext> functDecPara() {
			return getRuleContexts(FunctDecParaContext.class);
		}
		public FunctDecParaContext functDecPara(int i) {
			return getRuleContext(FunctDecParaContext.class,i);
		}
		public FunctDecParaListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functDecParaList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterFunctDecParaList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitFunctDecParaList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitFunctDecParaList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctDecParaListContext functDecParaList() throws RecognitionException {
		FunctDecParaListContext _localctx = new FunctDecParaListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functDecParaList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			functDecPara();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(142);
				match(T__3);
				setState(143);
				functDecPara();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctDecParaContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MgParser.Identifier, 0); }
		public FunctDecParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functDecPara; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterFunctDecPara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitFunctDecPara(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitFunctDecPara(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctDecParaContext functDecPara() throws RecognitionException {
		FunctDecParaContext _localctx = new FunctDecParaContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functDecPara);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			type();
			setState(150);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyContext extends ParserRuleContext {
		public List<ClassBodyDecContext> classBodyDec() {
			return getRuleContexts(ClassBodyDecContext.class);
		}
		public ClassBodyDecContext classBodyDec(int i) {
			return getRuleContext(ClassBodyDecContext.class,i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_classBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(T__5);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Bool) | (1L << Int) | (1L << String) | (1L << Void) | (1L << Identifier))) != 0)) {
				{
				{
				setState(153);
				classBodyDec();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassBodyDecContext extends ParserRuleContext {
		public ConstructorDecContext constructorDec() {
			return getRuleContext(ConstructorDecContext.class,0);
		}
		public MethodDecContext methodDec() {
			return getRuleContext(MethodDecContext.class,0);
		}
		public FieldDecContext fieldDec() {
			return getRuleContext(FieldDecContext.class,0);
		}
		public ClassBodyDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBodyDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).enterClassBodyDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MgListener ) ((MgListener)listener).exitClassBodyDec(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MgVisitor ) return ((MgVisitor<? extends T>)visitor).visitClassBodyDec(this);
			else return visitor.visitChildren(this);
		}
	}
